--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,9 @@
 [package]
 name = "pipeline"
-version = "1.0.0"
-authors = ["Johann <git@johann-hofmann.com>"]
+version = "0.4.0"
+authors = ["Johann Hofmann <mail@johann-hofmann.com>"]
+description = "A macro collection to pipe |> your functions calls, like in F# or Elixir."
+repository = "https://github.com/johannhof/pipeline.rs"
+readme = "README.md"
+keywords = ["pipe", "function", "elixir", "macro", "composition"]
+license = "MIT"
